...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="100dp"
        android:text="Welcome!"
        android:textColor="@color/white"
...
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="Sign In"
        android:textSize="14sp"
        android:textStyle="italic"
...
