<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="description_title" type="id" />
    <item name="description_text" type="id" />
    <item name="editButt" type="id" />
    <item name="deleteButt" type="id" />
    <item name="buttonLayout" type="id" />
    <item name="createButt" type="id" />
    <item name="goBackButt" type="id" />
    <item name="updateButt" type="id" />
    <item name="upvoteCount" type="id" />
    <item name="downvoteCount" type="id" />
    <item name="closeDescButton" type="id" />
    <item name="editEventName" type="id" />
    <item name="editLocation" type="id" />
    <item name="editEventDate" type="id" />
    <item name="editEventTime" type="id" />
    <item name="editDetails" type="id" />
</resources>